add more style and type js functionality third commit

--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
                 </ul>
             </nav>
         </div>
+
+        <div class="header-text">
+            <h1>Hi, I am <span id="id-name">Sahil Rawat</span> From<br/> India and I am a <br/><span id="element">Web Developer</span></h1>
+        </div>
     </div>
+
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+
+    <script>
+        var typed = new Typed('#element', {
+          strings: ['Web Developer','UI/UX Designer', 'Programmer', 'Upcoming SDE 1'],
+          typeSpeed: 70,
+        });
+      </script>
 </body>
 </html>
