add services section sixth commit

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My-Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script src="https://kit.fontawesome.com/19ddebdb90.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -55,7 +56,8 @@
                         
                         <div class="about-content">
                             <p>
-                                Hi, I’m Sahil Rawat, a passionate Web Developer & Designer from India. I specialize in
+                                Hi, I’m Sahil Rawat, a passionate Web Developer & Designer from India.
+                                I specialize in
                                 creating interactive, user-friendly, and visually appealing websites using HTML, CSS,
                                 JavaScript, and React.
                             </p>
@@ -118,6 +120,41 @@
                 </div>
             </div>
         </div>
+
+        <!-- Sevices -->
+        <div id="services">
+            <div class="container">
+                <h1 class="sub-title">My Services</h1>
+
+                <div class="services-list">
+
+                    <div>
+                        <i class="fa-solid fa-code"></i>
+                        <h2>Web Developer</h2>
+                        <p>I am able to develop and design web applications.</p>
+                        <a href="#">Learn More</a>
+                    </div>
+
+                    <div>
+                        <i class="fa-solid fa-crop"></i>
+                        <h2>UI/UX Design</h2>
+                        <p>I am able design web applications with visually appealing UI/UX.</p>
+                        <a href="#">Learn More</a>
+                    </div>
+
+                    <div>
+                        <i class="fa-brands fa-app-store"></i>
+                        <h2>App desgin</h2>
+                        <p>I am able design applications.</p>
+                        <a href="#">Learn More</a>
+                    </div>
+                    
+
+                </div>
+            </div>
+        </div>
+
+
     </div>
 
 
