--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                 <img src="./logo/srlogo.jpg" alt="logo" class="logo" id="logoSr">
 
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -154,8 +154,80 @@
             </div>
         </div>
 
+        <!-- portfolio -->
+        <div id="portfolio">
+            <div class="container">
+                <h1 class="sub-title">My Work</h1>
+                <div class="work-list">
+                    <div class="work">
+                        <img src="https://images.pexels.com/photos/39284/macbook-apple-imac-computer-39284.jpeg?auto=compress&cs=tinysrgb&w=600" alt="img">
 
+                        <div class="layer">
+                            <h3>Social Media App</h3>
+                            <p>This app is very good you can connect people from outside world</p>
+                            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="https://images.pexels.com/photos/230544/pexels-photo-230544.jpeg?auto=compress&cs=tinysrgb&w=600" alt="img">
+
+                        <div class="layer">
+                            <h3>E-commerce App</h3>
+                            <p>This app is very good you can connect people from outside world</p>
+                            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="https://images.pexels.com/photos/3888149/pexels-photo-3888149.jpeg?auto=compress&cs=tinysrgb&w=600" alt="img">
+
+                        <div class="layer">
+                            <h3>Hatred spreader App</h3>
+                            <p>This app is very good you can connect people from outside world</p>
+                            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <a href="#" class="btn">See More</a>
+            </div>
+        </div>
+
+<!-- contact -->
+
+    <div id="contact">
+        <div class="container">
+         <div class="row-three">
+             <div class="contact-left">
+                <h1 class="sub-title">Contact Me</h1>
+                <p> <i class="fa-regular fa-paper-plane"></i>  contact@example.com</p>
+                <p> <i class="fa-solid fa-walkie-talkie"></i> 9988776655</p>
+                <div class="social-icons">
+                    <a href="https://facebook.com/"><i class="fa-brands fa-square-facebook"></i></a>
+                    <a href="https://instagram.com/"><i class="fa-brands fa-square-instagram"></i></a>
+                    <a href="https://github.com/Sahil-Rawat-001"><i class="fa-brands fa-square-github"></i></a>
+                    <a href="www.linkedin.com/in/rawat-sahil007"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://facebook.com/"><i class="fa-brands fa-square-x-twitter"></i></a>
+                </div>
+                <a href="resume_sahil_rawat.pdf" download class="btn">Download Resume</a>
+             </div>
+             <div class="contact-right">
+
+                <form name="submit-to-google-sheet">
+                    <input type="text" name="Name" placeholder="Full Name" required>
+                    <input type="email" name="Email" placeholder="abc@gmail.com" required>
+                    <textarea name="Message" rows="6" placeholder="type message here"></textarea>
+                    <button type="aubmit" class="btn">Submit</button>
+                </form>
+                <span id="msg"></span>
+             </div>
+         </div>
+        </div>
     </div>
+
+    <!-- copyright -->
+    <div class="copyright">
+      <p>copyright © Sahil. Made with <i class="fa-solid fa-heart"></i> by learning web development  </p>
+    </div>
+</div>
 
 
     <script>
