--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <h1 class="sub-title">My Work</h1>
                 <div class="work-list">
                     <div class="work">
-                        <img src="https://images.pexels.com/photos/39284/macbook-apple-imac-computer-39284.jpeg?auto=compress&cs=tinysrgb&w=600" alt="img">
+                        <img src="images/photo_1.jpg" alt="img">
 
                         <div class="layer">
                             <h3>Social Media App</h3>
@@ -169,7 +169,7 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="https://images.pexels.com/photos/230544/pexels-photo-230544.jpeg?auto=compress&cs=tinysrgb&w=600" alt="img">
+                        <img src="images/photo_2.jpg" alt="img">
 
                         <div class="layer">
                             <h3>E-commerce App</h3>
@@ -178,7 +178,7 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="https://images.pexels.com/photos/3888149/pexels-photo-3888149.jpeg?auto=compress&cs=tinysrgb&w=600" alt="img">
+                        <img src="images/photo_3.jpg" alt="img">
 
                         <div class="layer">
                             <h3>Hatred spreader App</h3>
@@ -210,7 +210,6 @@
                 <a href="resume_sahil_rawat.pdf" download class="btn">Download Resume</a>
              </div>
              <div class="contact-right">
-
                 <form name="submit-to-google-sheet">
                     <input type="text" name="Name" placeholder="Full Name" required>
                     <input type="email" name="Email" placeholder="abc@gmail.com" required>
