--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                         <img src="images/photo_3.jpg" alt="img">
 
                         <div class="layer">
-                            <h3>Hatred spreader App</h3>
-                            <p>This app is very good you can connect people from outside world</p>
+                            <h3>Watch Movie App</h3>
+                            <p>This app is very good you can watch movie from outside world</p>
                             <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
@@ -205,7 +205,7 @@
                     <a href="https://instagram.com/"><i class="fa-brands fa-square-instagram"></i></a>
                     <a href="https://github.com/Sahil-Rawat-001"><i class="fa-brands fa-square-github"></i></a>
                     <a href="www.linkedin.com/in/rawat-sahil007"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://facebook.com/"><i class="fa-brands fa-square-x-twitter"></i></a>
+                    <a href="https://x.com/"><i class="fa-brands fa-square-x-twitter"></i></a>
                 </div>
                 <a href="resume_sahil_rawat.pdf" download class="btn">Download Resume</a>
              </div>
